# TestOpenGL

./: CMakeLists.txt  frame.glsl  glad.c  img_implementation.cpp  main.cpp  tempshade.h  tempvertex.glsl
coordinate/: CusCoordinate.cpp  CusCoordinate.h  coordinate_shader.glsl
light/: Camera.h  Light.cpp  Light.h  lamp_frame.glsl  lighting_frame.glsl  lighting_shader.glsl
texture/: frame_practice_fourth.glsl  texture.cpp
transformation/: CusTransformation.cpp  CusTransformation.h  trans_frame.glsl  trans_shader.glsl
